Atualizacao aula 02 e readme

--- a/02-Autenticacoes/index.html
+++ b/02-Autenticacoes/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autentificações</title>
+    <title>Autenticações</title>
 </head>
 <body>
-    
+    <h1>Autenticações</h1>
+    <p>Para autenticar-se no GitHub, você pode usar um nome de usuário e uma senha ou um token de acesso pessoal.</p>
+    <p>Para gerar um token de acesso pessoal, siga as etapas abaixo:</p>    
+    <ol>
+        <li>Na barra de navegação do GitHub, clique na sua foto de perfil e, em seguida, clique em <strong>Settings</strong>.</li>
+        <li>No menu da barra lateral esquerda, clique em <strong>Developer settings</strong>.</li>
+        <li>No menu da barra lateral esquerda, clique em <strong>Personal access tokens</strong>.</li>
+        <li>Clique em <strong>Generate new token</strong>.</li>
+        <li>Dê um nome ao token, selecione as permissões necessárias e clique em <strong>Generate token</strong>.</li>
+        <li>Copie o token e guarde-o em um local seguro. Você não poderá vê-lo novamente.</li>
+    </ol>
 </body>
 </html>
